--- a/Pdfowicz/src/index.html
+++ b/Pdfowicz/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>body{background:#222;display:flex;flex-direction:column;align-items:center;padding:20px;color:#000;text-align:center}</style><link rel="stylesheet" href="styles.344fe3a0b55066e4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.344fe3a0b55066e4.css"></noscript>
 </head>
 <body>
   <app-root></app-root>
