--- a/Pdfowicz/src/index.html
+++ b/Pdfowicz/src/index.html
@@ -7,8 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>body{background:#222;display:flex;flex-direction:column;align-items:center;padding:20px;color:#000;text-align:center}</style><link rel="stylesheet" href="styles.344fe3a0b55066e4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.344fe3a0b55066e4.css"></noscript>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
